<resources>
    <string name="app_name">GOLD IT</string>

    <string name="gold_it">GOLD IT</string>
    <string name="select_purity">Select Purity</string>
    <string name="price_drop_alert">Price Drop Alert</string>
    <string name="location">Location</string>
    <string name="_22_k">22K</string>
    <string name="_24_k">24K</string>
    <string name="save">Save</string>
    <string name="live">Live</string>
    <string name="or">or</string>
    <string name="gold_rate">Gold Rate</string>
    <string name="one_gram">/ G</string>
    <string name="eight_gram">/ 8G</string>
    <string name="alert_on">Alert on</string>
    <string name="add_new_plus">+</string>
    <string name="gold_rate_below_target">Gold Rate Below Target !!</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="notifications">Notifications</string>
    <string name="welcome">Welcome</string>
    <string name="setAlert">Set Alert</string>
    <string name="profile_details">Profile Details</string>
    <string name="confirmation">Confirmation</string>
    <string name="logout_confirmation">Are you sure you want to Logout ?</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_price">Enter a valid price!</string>
    <string name="channelId">Price Drop Alerts</string>
    <string name="notified_alert_detail">Notified Alert Detail</string>
    <string name="notified_alerts">Notified Alerts</string>
    <string name="sign_in_text">Sign In  to have a watch on \n Gold Prices in Market</string>
    <string name="sign_in_text_2">Create price drop alerts for 22K and 24K \n purity levels of gold. \n\n You will be notified when the prices drop!!</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="current_gold_price">Current Gold Price</string>
    <string name="purity">Purity</string>
    <string name="about">About App</string>
    <string name="per_g_rate">Per Gram Price Alert Set To</string>
    <string name="alert_created">Alert Created On</string>
    <string name="alert_notified">Alert Notified On</string>
    <string name="alert_done_today">Alert Achieved Today</string>
    <string name="enable_alert">Enable this Alert again!</string>
    <string name="per_g_price">Per Gram Price</string>
    <string name="investment">Happy Gold Investments!!</string>
    <string name="about_app">Gold It helps you to keep track of Gold Prices in Market!</string>
    <string name="app_icon_used">Application Images downloaded from UnSplash [user - Zlaťáky.cz] and jamawealth.com</string>
    <string name="api_used">Gold rates are fetched from CARAT API published by metalpriceapi.com</string>
    <string name="credits">CREDITS :</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="currency">Currency</string>
    <string name="inr">INR</string>
    <string name="india">India</string>
</resources>