<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_heading1"
            android:textSize="32sp"
            android:gravity = "center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/light_background"
            android:text="@string/app_name"
            android:textColor = "@color/primary"
            android:textStyle = "bold"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_heading2"
            style="@style/normal"
            android:textSize="18sp"
            android:gravity = "center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/light_background"
            android:text="@string/sign_in_text"
            android:textStyle = "italic"
            app:layout_constraintDimensionRatio="4:1"
            app:layout_constraintTop_toBottomOf="@id/app_heading1" />

        <TextView
            style="@style/mild"
            android:id="@+id/app_heading3"
            android:textSize="16sp"
            android:gravity = "center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/sign_in_text_2"
            android:textStyle = "italic"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintTop_toBottomOf="@id/app_heading2" />


        <LinearLayout
            android:id="@+id/email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/primary_color_rectangle_enabled"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/google_button"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1.5"
                android:gravity="end"
                android:src="@drawable/ic_baseline_email_24" />

            <TextView
                style="@style/normal"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="2"
                android:gravity="start|center"
                android:text="@string/sign_in_email"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/primary_color_rectangle_enabled"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_heading3"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1.5"
                android:gravity="end"
                android:src="@drawable/google_sign_in"/>

            <TextView
                style="@style/normal"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="2"
                android:gravity="start|center"
                android:text="@string/sign_in_google"
                android:textSize="16sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>