<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".setAlert.SetAlert">

    <data>

        <variable
            name="alert"
            type="com.example.goldit.room.Alert" />

        <variable
            name="viewModel"
            type="com.example.goldit.setAlert.SetAlertViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation = "vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/light_background"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_6"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/primary" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/select_purity"
                    style="@style/mild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:text="@string/select_purity"
                    app:layout_constraintTop_toTopOf="parent"
                    />


                <RadioGroup
                    android:id="@+id/gold_variations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/select_purity">

                    <RadioButton
                        android:id="@+id/gold_22k"
                        style="@style/normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:layout_weight="1"
                        android:background="@drawable/grey_rectangle"
                        android:button="@null"
                        android:checked="@{viewModel.caratType.equalsIgnoreCase(@string/_22_k)}"
                        android:gravity="center"
                        android:text="@string/_22_k"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/gold_24k"
                        style="@style/normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grey_rectangle"
                        android:button="@null"
                        android:checked="@{viewModel.caratType.equalsIgnoreCase(@string/_24_k)}"
                        android:gravity="center"
                        android:text="@string/_24_k"
                        android:textSize="16sp" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/box_price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginRight="@dimen/margin_16"
                    app:boxStrokeWidth="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gold_variations">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_price_drop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/per_g_price"
                        android:inputType="number"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:onTextChanged="@{viewModel::onPriceChanged}"
                        android:text="@{String.valueOf(viewModel.price)}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/primary" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/delete_button"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="@dimen/margin_24"
                    android:background="@drawable/primary_color_rectangle_enabled"
                    android:onClick="@{() -> viewModel.onDeleteClicked(alert)}"
                    android:text="@string/delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/box_price" />

                <TextView
                    android:id="@+id/save_button"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/primary_color_rectangle_enabled"
                    android:onClick="@{() -> viewModel.onSaveButtonClicked()}"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/delete_button"
                    app:layout_constraintVertical_bias="0.75" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>

</layout>